# physical_models

./: CMakeLists.txt  Makefile  main.c  main.cpp
drawer/: Plot.cpp  Plot.h  data.txt  draw.py
headers/: zadacha_82.h
includes/: includes_zadach.h
lib/headers/: arr.h
lib/includes/: Vector.h  until.h  vec.h
lib/src/: Vector.cpp  arr.c  until.c  until.cpp  vec.c
zadacha_82/: zadacha_82.c  zadacha_82.cpp  zadacha_82.md
zadacha_chёt_impulse/: zadacha_chёt_impulse.cpp
zadacha_dop/: generation.cpp  generation.h  zadacha_dop.cpp
zadacha_dop/drawer/: Plot.h
zadacha_montecarlo/: zadacha_montecarlo.cpp
zadacha_serpinskiy_kvadrat/: zadacha_serpinskiy_kvadrat.cpp
zadacha_solnechn_system/: zadacha_solnechn_system.cpp
zadacha_wave/: zadacha_wave.cpp
